# Zadanie2

./: README.md
task2/: BackupJob.cpp  BackupJob.h  CMakeLists.txt  IStorageAlgorithm.h  RestorePoint.cpp  RestorePoint.h  SingleStorage.cpp  SingleStorage.h  SplitStorage.cpp  SplitStorage.h  main.cpp
